<resources>
    <string name="app_name">MAD_Project</string>
    <string name="etName">Full Name</string>
    <string name="etEmail">Email Address</string>
    <string name="etMobile">Mobile Number</string>
    <string name="etNic">NIC Number</string>
    <string name="etAddress">Home Address</string>
    <string name="etPassword">Password</string>
    <string name="etPassword2">Confirm Password</string>
    <string name="btnSignUp">Sign Up</string>
    <string name="linkLogin">Already Registered? Login Here</string>
    <string name="btnSignIn">Log In</string>
    <string name="linkSignIn">New Here? Sign Up Here</string>
    <string name="btnViewFB">See Your Feedback</string>
    <string name="btnFB">Send Feedback</string>
    <string name="FBMessage">Message</string>
    <string name="FBEmail">Email Address</string>
    <string name="FBName">Full Name</string>
    <string name="et_source">Enter Your Location</string>
    <string name="et_destination">Enter your Destination</string>
    <string name="btnDisplay">Display Route</string>
    <string name="topic">APS Parking App</string>
    <string name="header">Create New Account</string>
    <string name="header1">Welcome Back!</string>
    <string name="header2">Feedback</string>
    <string name="header3">Navigate Parking Lot</string>
    <string name="btnlogout">LogOut</string>
    <string name="customer_points">Customer Points :</string>
    <string name="edit_your_account">Edit Your Account</string>
    <string name="make_your_own_parking">Make Your Own Parking</string>
    <string name="parking_history">Parking History</string>
    <string name="change_password">Change Password</string>
    <string name="logout">Logout</string>
    <string name="Update">Done</string>
    <string name="cancel">Cancel</string>
    <string name="BOOkname">Name</string>
    <string name="BOOKemail">Email</string>
    <string name="BOOKNIC">NIC</string>
    <string name="BOOKmobile">Mobile</string>
    <string name="bookdelete">Bookdelete</string>
    <string name="bookupdate">Bookupdate</string>
    <string name="BUpdate">Update</string>
    <string name="Bdelete">Delete</string>
    <string name="Bsearch">Search</string>
    <string name="email1">Email</string>
    <string name="choose_image">Choose Image</string>
    <string name="todo">TODO</string>
    <string name="town">Town</string>
    <string name="addres">Addres</string>
    <string name="address">Address</string>
    <string name="rate_per_hour">Rate per Hour</string>
    <string name="addemail">Email</string>
    <string name="hours">Enter Hours</string>
    <string name="chargers">chargers</string>
    <string name="bookingprofileheader">Booking Profile</string>
    <string name="header4">Enter Your Email Address</string>
    <string name="btnEmail">Confirm</string>
    <string name="Forgotpassword">Forgot your password?</string>
    <string name="btnChangePassword">Change Password</string>
    <string name="header5">Change your password</string>
    <string name="CHOOSE_IMAGE">Choose Image</string>
    <string name="addparkingEmail">Email</string>
    <string name="addparkingTown">Town</string>
    <string name="addparkingAddress">Address</string>
    <string name="addparkingHeader">Add your parking lot</string>
    <string name="my_account">My account</string>
    <string name="hello">Hello</string>
    <string name="addrate_per_hour_100_00_rs">Rate Per Hour : 100.00 Rs.</string>
    <string name="addimagebtn">addimagebtn</string>
    <string name="adddiscription">Discription</string>
    <string name="addaddparking">Addparking</string>
    <string name="aadd_parking">Add Parking</string>
    <string name="addmobile_number">Mobile Number</string>
    <string name="addpayment">Payment</string>
    <string name="welcome">Welcome!</string>
    <string name="connect_with_us">Connect With Us</string>
    <string name="connect_with_us_our_team_is_here_to_help_you">Connect With Us - Our team is here to help you</string>
    <string name="search_your_parking_here">Search Your Parking Here</string>
    <string name="make_your_parking_with_your_fingers_developed_for_a_easy_and_better_parking_experience">Make your Parking with your fingers.Developed for a easy and better parking experience</string>
    <string name="hist_Name">Name</string>
    <string name="view_your_details">View Your Details</string>
    <string name="remove_your_account">Remove your Account</string>
    <string name="description">description</string>
    <string name="parkmobile">parkmobile</string>
    <string name="addpark">Addpark</string>
    <string name="Bookpay">payment</string>
    <string name="addparking_lot_display_deuration_in_weeks">Parking Lot Display Deuration (In Weeks)</string>
    <string name="addgive_number">Give Number</string>
    <string name="addweek_rental_50_00rs_up_to_two_weeks_more_than_two_weeks_week_rental_100_00rs">Week Rental 50.00Rs Up to Two Weeks More Than Two Weeks Week Rental 100.00Rs</string>
    <string name="addamount">Amount</string>
    <string name="addmobile">Mobile</string>
    <string name="homeuser">User</string>
    <string name="homeadd_parking">Add Parking</string>
    <string name="homebooking">Booking</string>
    <string name="homemap">Map</string>
    <string name="homeaps_parking_app">APS Parking App</string>
    <string name="homeimgpark0">imgpark0</string>
    <string name="himgparking5">imgparking5</string>
    <string name="hparkingimg4">parkingimg4</string>
    <string name="hparkimg1">parkimg1</string>
    <string name="hparkingimg3">parkingimg3</string>
    <string name="hparkingimg2">parkingimg2</string>
    <string name="BookPaycard">pay</string>
    <string name="BOOkuserlist">View book list</string>

    <string name="next">NEXT</string>

    <string name="paycard_details">Card Details</string>
    <string name="paypay_amount">Pay Amount</string>
    <string name="payname_on_card">Name On Card</string>
    <string name="paycard_number">Card Number</string>
    <string name="paycvv">CVV</string>
    <string name="paymm_yy">MM/YY</string>
    <string name="paywe_accept">We Accept</string>
    <string name="payimg1">payimg1</string>
    <string name="payimg2">payimg2</string>
    <string name="payimg3">payimg3</string>
    <string name="payimage4">payimage4</string>
    <string name="edtedit_details">Edit Details</string>
    <string name="ownadd_park">ADD PARK</string>
    <string name="ownyou_have_add_x_parks">You have add x Parks</string>


</resources>