<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/car1"
    tools:context=".Addparking">

    <TextView
        android:id="@+id/tpoic1"
        android:layout_width="382dp"
        android:layout_height="53dp"
        android:fontFamily="monospace"
        android:text="@string/addparkingHeader"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#1B0101"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <ImageView
        android:id="@+id/imageViewaddid"
        android:layout_width="104dp"
        android:layout_height="96dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="88dp"
        android:layout_marginEnd="303dp"
        android:layout_marginBottom="535dp"
        android:contentDescription="@string/addimagebtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <Button
        android:id="@+id/btnChoose"
        android:layout_width="229dp"
        android:layout_height="62dp"
        android:layout_alignBottom="@+id/imageViewaddid"
        android:layout_marginEnd="27dp"
        android:layout_toEndOf="@+id/imageViewaddid"
        android:background="@drawable/btn_drawable_selector1"
        android:text="@string/CHOOSE_IMAGE"
        app:layout_constraintBottom_toTopOf="@+id/emid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.648"
        app:layout_constraintStart_toEndOf="@+id/imageViewaddid"
        app:layout_constraintTop_toBottomOf="@+id/tpoic1"
        app:layout_constraintVertical_bias="0.642" />

    <EditText
        android:id="@+id/emid"
        android:layout_width="342dp"
        android:layout_height="47dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addemail"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColorHint="#120101"
        app:layout_constraintBottom_toTopOf="@+id/townid"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewaddid"
        app:layout_constraintVertical_bias="0.461" />

    <EditText
        android:id="@+id/townid"
        android:layout_width="346dp"
        android:layout_height="46dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addparkingTown"
        android:inputType="textPersonName"
        android:textColorHint="#0C0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/amobid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/addid"
        android:layout_width="338dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addparkingAddress"
        android:inputType="textPersonName"
        android:textColorHint="#170101"
        app:layout_constraintStart_toStartOf="@+id/txtrateid"
        app:layout_constraintTop_toBottomOf="@+id/amobid" />

    <TextView
        android:id="@+id/txtrateid"
        android:layout_width="337dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corner"
        android:gravity="center"
        android:text="@string/addrate_per_hour_100_00_rs"
        android:textAllCaps="false"
        android:textColor="#0B0000"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/adddis"
        app:layout_constraintTop_toBottomOf="@+id/addid" />

    <EditText
        android:id="@+id/adddis"
        android:layout_width="344dp"
        android:layout_height="56dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:foregroundGravity="center_vertical|center"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textMultiLine|text"
        android:text="@string/adddiscription"
        app:layout_constraintBottom_toTopOf="@+id/butnaddpark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtrateid" />

    <Button
        android:id="@+id/butnaddpark"
        android:layout_width="268dp"
        android:layout_height="63dp"
        android:layout_marginTop="388dp"
        android:background="@drawable/btn_drawable_selector3"
        android:text="@string/aadd_parking"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/emid"
        app:layout_constraintVertical_bias="0.296" />

    <EditText
        android:id="@+id/amobid"
        android:layout_width="336dp"
        android:layout_height="48dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addmobile_number"
        android:inputType="phone"
        android:textColor="#0E0101"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#250303"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/addid"
        app:layout_constraintTop_toBottomOf="@+id/townid"
        app:layout_constraintVertical_bias="0.062"
        android:importantForAutofill="no" />

</androidx.constraintlayout.widget.ConstraintLayout>













