<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/carparking123"
    tools:context=".SearchUsersBooking">


    <EditText
        android:id="@+id/searchBookNIC"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:layout_width="293dp"

        android:layout_height="64dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/BOOKNIC"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/searchdetails"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <EditText
        android:id="@+id/searchBookname"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:layout_width="343dp"

        android:layout_height="71dp"
        android:layout_marginTop="257dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/BOOkname"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <EditText
        android:id="@+id/searchBookemail"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"

        android:layout_width="342dp"
        android:layout_height="70dp"
        android:layout_marginStart="31dp"
        android:layout_marginEnd="31dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/BOOKemail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.574" />

    <EditText
        android:id="@+id/searchBookmobile"
        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text.CenterStacked"
        android:layout_width="351dp"
        android:layout_height="70dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_corner"
        android:hint="@string/BOOKmobile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.752" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchdetails"
        style="@style/Widget.MaterialComponents.ActionBar.Solid"
        android:layout_width="108dp"
        android:layout_height="52dp"
        android:text="@string/Bsearch"
        app:backgroundTint="#450CF1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.805"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.251" />

    <TextView
        android:id="@+id/searchbook"
        android:layout_width="310dp"
        android:layout_height="49dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/aclonica"
        android:text="search details"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/searchupdated"
        android:layout_width="104dp"
        android:layout_height="51dp"
        android:text="@string/BUpdate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <Button
        android:id="@+id/paynumber2"
        android:layout_width="118dp"
        android:layout_height="55dp"
        android:text="@string/BookPaycard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.887"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />


</androidx.constraintlayout.widget.ConstraintLayout>
