<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/car1"
    tools:context=".Addparkingpayment">

    <TextView
        android:id="@+id/addpayid"
        android:layout_width="201dp"
        android:layout_height="54dp"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/addpayment"
        android:textAlignment="gravity"
        android:textColor="#170101"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.076"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.038" />


    <TextView
        android:id="@+id/displayid"
        android:layout_width="358dp"
        android:layout_height="47dp"
        android:text="@string/addparking_lot_display_deuration_in_weeks"
        android:textColor="#200000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.176" />

    <EditText
        android:id="@+id/numid"
        android:layout_width="350dp"
        android:layout_height="54dp"
        android:background="@drawable/rounded_corner"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/addgive_number"
        android:inputType="number"
        android:textColorHighlight="#FFFFFF"
        android:textColorHint="#100101"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/displayid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/weekfee"
        android:layout_width="357dp"
        android:layout_height="76dp"
        android:text="@string/addweek_rental_50_00rs_up_to_two_weeks_more_than_two_weeks_week_rental_100_00rs"
        android:textColor="#DC1515"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/numid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.384" />

    <TextView
        android:id="@+id/amntid"
        android:layout_width="328dp"
        android:layout_height="49dp"
        android:gravity="center"
        android:textColor="#090000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/weekfee"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.649" />

    <Button
        android:id="@+id/btnamt"
        android:layout_width="286dp"
        android:layout_height="66dp"
        android:background="@drawable/btn_drawable_selector1"
        android:text="@string/addamount"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.524" />

    <Button
        android:id="@+id/button11"
        android:layout_width="162dp"
        android:layout_height="63dp"
        android:background="@drawable/btn_drawable_selector4"
        android:fontFamily="@font/aclonica"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.818" />
</androidx.constraintlayout.widget.ConstraintLayout>